Refactor notebook: remove unused code and outputs, update execution counts

--- a/nb/PART1.ipynb
+++ b/nb/PART1.ipynb
@@ -2,23 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "id": "85378fc8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import torch\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -28,17 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "id": "789e2375",
    "metadata": {},
    "outputs": [],
    "source": [
     "# read the data\n",
     "filepath_train = \"/Users/tungvuduc/Desktop/PhD/projects/repos/notebooks/notebooks/assets/dna/datasets/CTCF_train_sequences.csv\"\n",
-    "train_df = pd.read_csv(filepath_train)\n",
     "\n",
-    "filepath_test = \"/Users/tungvuduc/Desktop/PhD/projects/repos/notebooks/notebooks/assets/dna/datasets/CTCF_test_sequences.csv\"\n",
-    "test_df = pd.read_csv(filepath_test)"
+    "filepath_test = \"/Users/tungvuduc/Desktop/PhD/projects/repos/notebooks/notebooks/assets/dna/datasets/CTCF_test_sequences.csv\""
    ]
   },
   {
@@ -114,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "id": "41311813",
    "metadata": {},
    "outputs": [
@@ -170,21 +158,6 @@
     "\n",
     "# for different sequence lengths we need to pad the sequence to the same length for batching\n",
     "# let's do it, for that we need a collate_fn\n",
-    "\n",
-    "def collate_fn(batch):\n",
-    "\n",
-    "    sequences = [item[\"seq\"] for item in batch]\n",
-    "    labels = [item[\"label\"] for item in batch]\n",
-    "    lengths = torch.tensor([len(item[\"seq\"]) for item in batch])\n",
-    "    labels = torch.hstack(labels).unsqueeze(1)\n",
-    "\n",
-    "    sequences = pad_sequence(sequences, batch_first=True)\n",
-    "    \n",
-    "    return {\n",
-    "        \"seq\": sequences,\n",
-    "        \"labels\": labels,\n",
-    "        \"lengths\": lengths\n",
-    "    }\n",
     "\n",
     "train_dataloader = DataLoader(dna_dataset_train, batch_size=65000, shuffle=True, collate_fn=collate_fn)\n",
     "test_dataloader = DataLoader(dna_dataset_test, batch_size=65000, shuffle=True, collate_fn=collate_fn)\n",
