Add configuration files, model training script, and utility functions for DNA sequence classification
- Create base configuration file for data, model, training parameters, and optimizer settings.
- Implement training model script to load datasets, initialize model, and handle training and validation loops.
- Add utility functions for setting random seeds, loading configurations, and managing file paths.
- Introduce DNAConvNet model architecture for DNA sequence classification.
- Implement data loading and preprocessing functions for DNA sequences.
- Refactor existing code for improved organization and readability.

--- a/nb/PART1.ipynb
+++ b/nb/PART1.ipynb
@@ -6,15 +6,7 @@
    "id": "85378fc8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n"
-   ]
+   "source": "import pandas as pd\nimport numpy as np\nfrom tqdm import tqdm\nimport matplotlib.pyplot as plt\nimport seaborn as sns\n%load_ext autoreload\n%autoreload 2"
   },
   {
    "cell_type": "code",
@@ -3509,27 +3501,37 @@
    ],
    "source": [
     "# Training loop\n",
-    "for epoch in range(epochs):\n",
-    "    print(f\"\\nEpoch {epoch+1}/{epochs}\")\n",
-    "    \n",
-    "    train_loss, train_acc = train_epoch(model, train_dataloader, criterion, optimizer, device)\n",
-    "    val_loss, val_acc = validate_epoch(model, test_dataloader, criterion, device)\n",
-    "    \n",
-    "    if epoch % 10 == 0:\n",
-    "        print(f\"Train Loss: {train_loss:.4f} | Train Acc: {train_acc:.2f}%\")\n",
-    "        print(f\"Val Loss:   {val_loss:.4f} | Val Acc:   {val_acc:.2f}%\")\n",
-    "    \n",
-    "    train_losses.append(train_loss)\n",
-    "    val_losses.append(val_loss)\n",
-    "    \n",
-    "    # Save best model\n",
-    "    if val_loss < best_val_loss:\n",
-    "        best_val_loss = val_loss\n",
-    "        torch.save(model.state_dict(), 'best_dna_model.pth')\n",
-    "        print(\"✓ Saved best model\")\n",
+    "import torch\n",
+    "train_losses = []\n",
+    "val_losses = []\n",
+    "best_val_loss = float('inf')\n",
     "\n",
-    "plt.plot(train_losses)\n",
-    "plt.plot(val_losses)\n"
+    "def train_val(epochs, model, train_dataloader, test_dataloader, criterion, optimizer, device, show_plot, save_model_dir, model_name, pretrained_param_dir, print_interval=20):\n",
+    "    if pretrained_param_dir:\n",
+    "        model = model.load_state_dict(torch.load(pretrained_param_dir))\n",
+    "    \n",
+    "    for epoch in tqdm(range(epochs), desc=\"Training epochs\"):\n",
+    "        \n",
+    "        train_loss, train_acc = train_epoch(model, train_dataloader, criterion, optimizer, device)\n",
+    "        val_loss, val_acc = validate_epoch(model, test_dataloader, criterion, device)\n",
+    "        \n",
+    "        if epoch % print_interval == 0:\n",
+    "            print(f\"Train Loss: {train_loss:.4f} | Train Acc: {train_acc:.2f}%\")\n",
+    "            print(f\"Val Loss:   {val_loss:.4f} | Val Acc:   {val_acc:.2f}%\")\n",
+    "        \n",
+    "        train_losses.append(train_loss)\n",
+    "        val_losses.append(val_loss)\n",
+    "        \n",
+    "        # Save best model\n",
+    "        if val_loss < best_val_loss:\n",
+    "            best_val_loss = val_loss\n",
+    "            save_model_dir = os.path.join(save_model_dir, model_name + \".pth\")\n",
+    "            torch.save(model.state_dict(), save_model_dir)\n",
+    "            print(\"✓ Saved best model\")\n",
+    "\n",
+    "    if show_plot:\n",
+    "        plt.plot(train_losses)\n",
+    "        plt.plot(val_losses)\n"
    ]
   },
   {
