Refactor configuration paths and update training script for improved clarity and functionality

--- a/nb/PART1.ipynb
+++ b/nb/PART1.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85378fc8",
    "metadata": {},
    "outputs": [],
-   "source": "import pandas as pd\nimport numpy as np\nfrom tqdm import tqdm\nimport matplotlib.pyplot as plt\nimport seaborn as sns\n%load_ext autoreload\n%autoreload 2"
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e84ab152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tfbind.utils.helper import set_seed, get_device, get_paths, load_config\n"
+   ]
   },
   {
    "cell_type": "code",
